# chat_test_task

./: .env.docker  .env.docker.template  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
actions/: create_supersuer.py
alembic/versions/: 2025_05_12_1811-8dcf40ba4003_initial_migration.py  2025_05_16_1451-529e42e5a46e_add_readmessagestatus_table.py  2025_05_16_1613-33f242d5c684_message_is_fully_read_status.py  2025_05_18_0133-ef443667ebad_add_m2m_model_constraint.py  2025_05_18_0143-9ec1937ed99d_add_cascade_deletes.py  2025_05_18_0153-f6d42a072762_table_orphan_fixes.py  2025_05_20_1748-48aea12a7a7f_indexes_adding.py  2025_05_20_1835-45fee56dd406_insert_data_to_db.py
api/: __init__.py  auth.py
api/dependencies/: entity_finder.py
api/repositories/: chat_repository.py  group_repository.py  message_repository.py  users_repository.py
api/repository/: base_repository.py  users_repository.py
api/router/: users_router.py
api/routers/: __init__.py  chat_router.py  group_router.py  message_router.py  users_router.py  websocket_router.py
api/service/: base_service.py  users_service.py
api/services/: base_service.py  chat_service.py  group_service.py  message_service.py  users_service.py
api/websocket/: handlers.py  websocket_entry_info.py
core/: Exceptions.py  config.py  connection_manager.py
core/authentication/: transport.py  user_manager.py
core/models/: __init__.py  access_token.py
core/schemas/: chat.py  group.py  message.py  user.py
test/: conftest.py
(+24 files in other folders)
